Fix+CSS: #files, z-index++

--- a/css/files.scss
+++ b/css/files.scss
@@ -1,7 +1,7 @@
 #files {
 	box-sizing: border-box;
 	position: absolute;
-	z-index: 2;
+	z-index: 3;
 	min-width: 150px;
 	max-width: 400px;
 	left: 0;
